# vksdk-example-project

./: CMakeLists.txt  README.md
src/examples/: CMakeLists.txt  CustomLogger.cpp  CustomReceiver.cpp  CustomSender.cpp
